--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
               <a href="<%= graphs_path %>">Graphs</a>
 
               <span class="nav_rod">//</span>
-              <a href="<%= documents_path %>">Documents</a>
+              <a href="<%= documents_and_downloads_path %>">Documents & Downloads</a>
 
               <span class="nav_rod">//</span>
               <a href="<%= gallery_path %>">Gallery</a>
