--- a/app/views/pages/graphs.html.erb
+++ b/app/views/pages/graphs.html.erb
@@ -34,7 +34,7 @@
     <a href="#acm_pow_total_chart">Total Power Output</a>
       <span class="nav_rod">//</span>
 
-    <a href="#pv_temp_chart">Temperature by Module</a>
+    <a href="#pv_temp_chart">Temp. by Module</a>
       <span class="nav_rod">//</span>
 
     <a href="#irr_chart">Solar Irradiance</a>
@@ -43,7 +43,7 @@
     <a href="#wtemp_flowrate_chart">Water Temp. and Flowrate</a>
       <span class="nav_rod">//</span>
 
-    <a href="#bat_box_chart">Battery Box Temperature</a>
+    <a href="#bat_box_chart">Battery Box Temp.</a>
 
     <hr />
 
