--- a/app/views/pages/power_by_module.html.erb
+++ b/app/views/pages/power_by_module.html.erb
@@ -27,12 +27,29 @@
   <thead>
     <tr>
       <th scope="column">Time</th>
-      <th scope="column">PV1</th>
-      <th scope="column">PV2</th>
-      <th scope="column">PV3</th>
-      <th scope="column">PV4</th>
-      <th scope="column">PV5</th>
-      <th scope="column">PV6</th>
+      <th scope="column" style="color: <%= color_by_module("M421101006AJB") %>">
+        M421101006AJB <span class="module_label_small">(PV1)</span>
+      </th>
+      <th scope="column" style="color: <%= color_by_module("M431101063AJA") %>">
+        M431101063AJA <span class="module_label_small">(PV2)</span>
+      </th>
+
+      <th scope="column" style="color: <%= color_by_module("M431101029AJ2") %>">
+        M431101029AJ2 <span class="module_label_small">(PV3)</span>
+      </th>
+
+      <th scope="column" style="color: <%= color_by_module("M461101120AJF") %>">
+        M461101120AJF <span class="module_label_small">(PV4)</span>
+      </th>
+
+      <th scope="column" style="color: <%= color_by_module("M461101053AJ8") %>">
+        M461101053AJ8 <span class="module_label_small">(PV5)</span>
+      </th>
+
+      <th scope="column" style="color: <%= color_by_module("M461101194AJ0") %>">
+        M461101194AJ0 <span class="module_label_small">(PV6)</span>
+      </th>
+
       <th scope="column">Total (W)</th>
     </tr>
   </thead>
