--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -98,3 +98,19 @@ h2 h3 h4 {
   text-align: justify;
   font-family: "Roboto";
 }
+
+#pv_map_table {
+  width: 300px; 
+  height: 300px; 
+  border: 1px solid #333;
+}
+
+.pv_map_td {
+  text-align: center;
+  padding: 5px 5px 5px 5px;
+  border: 1px solid #333;
+}
+
+.module_label_small {
+  font-size: 0.7em;
+}
