Fixed bug with ACM graphs, Backup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
               <a href="<%= about_path %>">About</a>
 
               <span class="nav_rod">//</span>
-              <a href="<%= contact_path %>">Contact</a>
+              <a href="<%= data_tracker_path %>">Data Tracker</a>
 
               <span class="nav_rod">//</span>
               <% if current_user %>
