--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -31,4 +31,27 @@
     The OCNL Solar Lab was designed by Mechanical Engineering faculty member Dr. Greg Kallio and constructed by Steve Eckart, Dave Gislon, and Scott Vanni of the College of ECC Technical Shops. The project was funded by a CSUC Research Foundation Scholars Award, a CSUC Student Learning Fee Grant, a CSU Chancellor’s Office Campus as a Living Lab (CALL) Grant, MMEM Annual Fund donations, and a donation of PV modules from Chico Electric, Inc.
   </p>
 
+  <h1>// Contact</h1>
+
+  <div class="page_content">
+
+    <p class="page_text_block">
+      Questions regarding the design, fabrication, and operation of the Solar Lab can be addressed to:
+    </p>
+
+    <address>
+      <img src="/images/kallio_contact.jpg" id="kallio_img"/> <br />
+      <strong>Dr. Greg Kallio</strong> (<a href="http://www.csuchico.edu/mmem/faculty_staff/Gregory_Kallio.shtml">Website</a>) <br />
+      Professor of Mechanical Engineering <br />
+      Department of Mechanical and Mechatronic Engineering and Sustainable Manufacturing <br />
+      O’Connell Technology Center, Room 419 <br />
+      California State University, Chico <br />
+      400 W. 1st Street <br />
+      Chico, CA  95929-0789 <br />
+      (530) 898-5346
+    </address>
+
+  </div>
+
 </div>
+
