--- a/app/views/pages/data_tracker.html.erb
+++ b/app/views/pages/data_tracker.html.erb
@@ -1,6 +1,6 @@
 <div class="pages_body">
 
-	<h3>// Date Tracker (Fluke Hydra)</h3>
+	<h3>// Data Tracker (Fluke Hydra)</h3>
 
 	<p style="padding: 10px 0px 0px 0px">
 		Each date should have <strong>24 Hours x 60 Minutes = 1440</strong> entries. All dates with less than 1440 entries are marked as missing in <span style="color: red;">red</span>. Please follow these steps to import the missing logs: 
