--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,3 +35,80 @@ a {
     text-decoration: none;
   }
 }
+
+#header {
+  background-color: rgba(252, 252, 252, 0.9);
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+  position: fixed;
+}
+
+#title {
+  float: left;
+  margin-right: 10px;
+}
+
+#navbar {
+  background-color: rgba(252, 252, 252, 0.9);
+  font-family: "Roboto";
+  text-align: left;
+  float: left;
+  display: inline-block;
+  font-size: 1em;
+  position: absolute;
+  border-bottom: 1px solid #CCC;
+  text-align: justify;
+  display: inline;
+  width: 98.7%; 
+  overflow: hidden;
+  /* Width is 98.7% so that the border ends at same distance as the table. */
+}
+
+.nav_rod{
+  padding: 0px 15px 0px 15px;
+  color: #CCC;
+}
+
+.nav_rod_paginate {
+  padding: 0px 20px 15px 20px;
+  color: #CCC;
+}
+
+#title_ocnl {
+  font-family: 'Roboto Slab';
+  font-size: 4.5em;
+  color: #00A388;
+  padding-right: 5px;
+}
+
+#title_sol {
+  font-size: 3.25em;
+  font-family: 'Raleway';
+  color: #FF6138;
+}
+
+#wrapper {
+   min-height:100%;
+   position:relative;
+}
+
+.body_view {
+  background-color: #FCFCFC;
+  padding: 100px 0px 30px 0px;
+  height: 100%;
+}
+
+#footer {
+  font-size: 14px;
+  position: absolute;
+  border-top: 1px solid #CCC;
+  border-bottom: 1px solid #CCC;
+  color: #585858;
+  text-align: center;
+  overflow: hidden;
+  width: 100%;
+  height: 30px;
+  font-size: 0.85em;
+  padding: 5px 0px 0px 0px;
+}
