--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
 
     <title>OCNL Solar Lab - California State University, Chico</title>
 
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
@@ -54,10 +57,10 @@
               <a href="<%= gallery_path %>">Gallery</a>
 
               <span class="nav_rod">//</span>
-              <a href="<%= about_path %>">About</a>
+              <a href="<%= data_tracker_path %>">Data Tracker</a>
 
               <span class="nav_rod">//</span>
-              <a href="<%= data_tracker_path %>">Data Tracker</a>
+              <a href="<%= about_path %>">About</a>
 
               <span class="nav_rod">//</span>
               <% if current_user %>
