--- a/app/views/pages/graphs.html.erb
+++ b/app/views/pages/graphs.html.erb
@@ -4,9 +4,23 @@
 
   <%= form_tag graphs_path, :method => 'get', :class => "form-inline" do %>  
     <p>  
-      <%= text_field_tag :start_range, params[:start_range], value: @search_start_dt, class: "form-control input-sm" %>
+      <div class='input-group date' id='datetimepicker_graphs1'>
+        <%= text_field_tag :start_range, params[:start_range], value: @search_start_dt, class: "form-control input-sm" %>
+                
+        <span class="input-group-addon">
+           <small><span class="glyphicon glyphicon-calendar"></span></small>
+        </span>
+      </div>
+
       to 
-      <%= text_field_tag :end_range, params[:end_range], value: @search_end_dt, class: "form-control input-sm" %>
+    
+      <div class='input-group date' id='datetimepicker_graphs2'>
+        <%= text_field_tag :end_range, params[:end_range], value: @search_end_dt, class: "form-control input-sm" %>  
+        
+        <span class="input-group-addon">
+           <small><span class="glyphicon glyphicon-calendar"></span></small>
+        </span>
+      </div>
 
       <%= text_field_tag :minter, params[:minter], placeholder: "Minute Interval: 30", class: "form-control input-sm", type: 'number' %>
 
